Changed legend to correct images, changed table to show the new images on change. Also fixed the issue with book img and Title overlapping when making window small

--- a/themes/default/desktop/style.css
+++ b/themes/default/desktop/style.css
@@ -69,9 +69,7 @@ body {
 .loginlabel, .passwordlabel{
   text-align: right;
 }
-.emailFilter{
-  text-align: left;
-}
+
 .userhead{
   font-size: 13pt;
 }
@@ -97,19 +95,58 @@ hr {
   margin-top:35px;
 }
 
-.glyphicon-ok {
-    font-size: 25px;
-    color: green;
-    position: relative;
-}
-.glyphicon-remove {
-    font-size: 25px;
-    color: red;
-
-}
 
 
+
+#open{
+  color:white;
+  background-color: white;
+  padding-left: 12px;
+  border: 2px black solid;
 }
+#openList{
+  color:white;
+  background-color: white;
+  padding-left: 12px;
+  border: 2px black solid;
+  font-size: 20px;
+  margin: 2px;
+}
+
+#closed{
+  color:lightgrey;
+  background-color: lightgrey;
+  padding-left: 12px;
+  border: 2px black solid;
+}
+#closedList{
+  color:lightgrey;
+  background-color: lightgrey;
+  padding-left: 12px;
+  border: 2px black solid;
+  font-size: 20px;
+  margin: 2px;
+
+}
+#reservationList{
+  font-size: 20px;
+  color:green;
+}
+takeList{
+  font-size: 20px;
+  color:red;
+}
+.glyphicon.glyphicon-remove{
+  color:red;
+}
+.glyphicon.glyphicon-ok{
+  color: green;
+}
+.glyphicon.glyphicon-ban-circle{
+  color: black;
+}
+
+
 #loginform ul {
     margin: 0px;
     padding: 0px;
@@ -161,7 +198,7 @@ hr {
     font-size: 20px;
     color: #FFFFFF;
     border: 0px;
-    margin: 0 auto;
+    margin: auto;
     padding: 5px;
     text-align: right;
     width: 80%;
@@ -175,7 +212,7 @@ hr {
     margin-top: 10px;
     padding: 3px;
     text-align: center;
-    width: 700px;
+    width: auto;
 }
 
 .remindermessage {
@@ -390,6 +427,7 @@ label{
 
 }
 
+
 #legendText{
   font-size: 12px;
   font-weight: bold;
@@ -399,23 +437,31 @@ label{
     border-top: 2px solid black;
     border-bottom:2px solid black;
     padding: 5px;
+    text-align: center;
     position: relative;
-    height: auto;
+    /* height: auto; */
     /* top: 300px; */
 
 }
+
+
+
 #legendTitleText{
   font-weight: bold;
-  font-size: 16px;
+  font-size: 28px;
 
 }
 #legendText {
+    padding-top: 6px;
+    font-size: 22px;
     font-weight: bold;
-
 }
 
 #legendtable td {
     text-align: left;
+}
+.table-responsive{
+  padding: 5px;
 }
 
 #successmsg {
@@ -445,11 +491,6 @@ label{
 }
 @media only screen and (max-width: 990px){
   .validuserchar{
-    text-align: right;
-  }
-}
-@media only screen and (max-width: 992px){
-  .emailFilter{
     text-align: right;
   }
 }
